--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
+<distributionManagement>
+  <snapshotRepository>
+    <id>chimeo_dep</id>
+    <url>http://nexus.senti1.com/content/repositories/chimeo_dep</url>
+  </snapshotRepository>
+</distributionManagement>
+
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.kencochrane</groupId>
