--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.kencochrane</groupId>
     <artifactId>raven-all</artifactId>
-    <version>2.0-SNAPSHOT-zolw-custom</version>
+    <version>2.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>raven-all</name>
     <description>Java Raven client and loggers.</description>
