--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.kencochrane</groupId>
     <artifactId>raven-all</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0.2-ZOLW-CUSTOM</version>
     <packaging>pom</packaging>
     <name>raven-all</name>
     <description>Java Raven client and loggers.</description>
     <url>http://sentry.readthedocs.org/en/latest/client/index.html</url>
 
 <distributionManagement>
-  <snapshotRepository>
-    <id>chimeo_dep</id>
+  <repository>
+    <id>chimeo_dep</id>	
     <url>http://nexus.senti1.com/content/repositories/chimeo_dep</url>
-  </snapshotRepository>
+  </repository>
 </distributionManagement>
 
     <licenses>
