--- a/raven-log4j/pom.xml
+++ b/raven-log4j/pom.xml
@@ -7,11 +7,10 @@
     <parent>
         <groupId>net.kencochrane</groupId>
         <artifactId>raven-all</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0.2-ZOLW-CUSTOM</version>
     </parent>
     <artifactId>raven-log4j</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.1-SNAPSHOT</version>
     <name>raven-log4j</name>
     <description>Log4J appender for Raven/Sentry.</description>
 
@@ -19,7 +18,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>raven</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
