--- a/raven/pom.xml
+++ b/raven/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>net.kencochrane</groupId>
         <artifactId>raven-all</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0.2-ZOLW-CUSTOM</version>
     </parent>
     <artifactId>raven</artifactId>
     <packaging>jar</packaging>
